--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 
 <header th:replace="fragments/header :: commonHeader"></header>
 
-<div class="container mt-5">
+<div class="container mt-5 background-[#fafbff]">
     <div class="title-section">
         <h2>창업 아이템 존</h2>
         <p>다양한 창업 아이템을 둘러보세요</p>
@@ -15,7 +15,7 @@
 
     <div class="row">
         <div class="col-md-4 mb-4" th:each="bundle : ${assetBundles}">
-            <div class="card">
+            <div class="card" style="background: #fff; border-radius: 15px; box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1); padding: 26px 30px;">
                 <div class="card-body">
                     <h5 class="card-title"><a th:href="@{/api/assetbundles/{id}(id=${bundle.id})}" th:text="${bundle.bundleTitle}">Bundle Title</a></h5>
                     <p class="card-text" th:text="${bundle.bundleDescription}">Bundle Description</p>
