refactor: 테이블 구조 변경에 맞춰 등록 폼 및 상태 관리 로직 수정, 모달 기능 추가

--- a/src/main/resources/templates/admin/assetBundle.html
+++ b/src/main/resources/templates/admin/assetBundle.html
@@ -16,6 +16,7 @@
         <div class="title-section">
             <h2>AssetBundle 관리 페이지</h2>
             <p>업로드된 AssetBundle을 관리합니다.</p>
+<!--            <a th:href="@{/api/assetbundles/uploadForm}" class="button-primary">새 번들 업로드</a>-->
         </div>
 
         <div class="item-card">
