--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -116,7 +116,7 @@
 </head>
 <link rel="stylesheet" th:href="@{/css/dashboard.css}">
 
-<body>
+<body style="padding-top: 72px;">
     <header th:replace="~{fragments/header :: commonHeader}"></header>
 
     <div class="dashboard-container">
